# Pak

./: CLAUDE.md  CURRENTLY_SUPPORTED.md  GRAMMAR.ebnf  IDIOMS.md  LANGUAGE.md  N64_HARDWARE.md  NOT_SUPPORTED.md  STDLIB.md  pyproject.toml
.claude/: settings.json
.github/workflows/: test.yml
ai/: .gitignore  Modelfile  README.md
ai/dataset/: full_dataset.jsonl  seed_dataset.jsonl
ai/scripts/: evaluate.py  expand_dataset.py  prepare_data.py  requirements.txt  train.py
docs/: pak-to-mips-transpiler-plan.md
docs/c-to-pak-transpiler/: README.md  phase-0-scaffolding.md  phase-1-types-and-declarations.md  phase-2-expressions-and-statements.md  phase-3-idiom-detection.md  phase-4-preprocessor-and-multifile.md  phase-5-n64-and-decomp.md  phase-6-output-quality.md  phase-7-graduation.md
examples/: features.pak  model_viewer.pak  sprite_game.pak
examples/canonical/: 01_hello.pak  02_variables.pak  03_functions.pak  04_structs.pak  05_enums.pak  06_variants.pak  07_control_flow.pak  08_arrays.pak  09_pointers.pak  10_result.pak  (+13 more)
pak/: __init__.py  __main__.py  ast.py  checker.py  cli.py  codegen.py  headergen.py  lexer.py  makefile_gen.py  pakfs.py  parser.py  typechecker.py
runtime/: pak_containers.h  pak_math.h  pak_mips_rt.s  pakfs.c  pakfs.h
tests/: test_api_patterns.py  test_canonical.py  test_checker.py  test_cli_mips.py  test_compiler.py  test_differential.py  test_fixes.py  test_invalid.py  test_mips_codegen.py  test_mutation.py  test_not_supported.py  test_snapshots.py
tools/: audit.sh  install-hooks.sh  pak_hook.py  pre-commit  validate_pak.sh
(+109 files in other folders)
