[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "pak-lang"
version = "0.1.0"
description = "Pak - A programming language for Nintendo 64 homebrew development"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
pak = "pak.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pak*"]
